--- a/source/_data/butterfly.yml
+++ b/source/_data/butterfly.yml
@@ -195,7 +195,7 @@ post_copyright:
 
 # 自動節選
 auto_excerpt:
-  enable: true
+  enable: false
   length: 150
 
 ####    Share System    ####
@@ -294,9 +294,9 @@ footer_copyright:
   enable: true
 
 ICP:
-  enable: false
-  url: http://
-  text: 甘ICP备
+  enable: true
+  url: http://www.beian.miit.gov.cn/
+  text: 陇ICP备20001074号-1
   icon: /img/icp.png
 
 ####   Analysis    ####
